Name: aurora
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Aurora-Library/issues
Synopsis: Haskell bindings to Aurora
Description: Apache Aurora is a service scheduler that runs on top of Mesos,
    enabling you to run long-running services that take advantage of Mesos'
    scalability, fault-tolerance, and resource isolation.
    .
    This library provides a Haskell API for Aurora with the main goals of:
    .
    * /Native configuration/: configure Aurora within Haskell
    .
    * /Static type safety/: check the aurora configuration at compile time
    .
    * /Stronger typing/: prevent some classes of configuration errors
Category: System
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Aurora-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base       >= 4       && < 5  ,
        wl-pprint                < 1.2,
        containers               < 0.6
    Exposed-Modules: Aurora
    GHC-Options: -O2 -Wall
