Name: aurora
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Aurora-Library/issues
Synopsis: Haskell bindings to Aurora
Description: Apache Aurora is a service scheduler that runs on top of Mesos,
    enabling you to run long-running services that take advantage of Mesos'
    scalability, fault-tolerance, and resource isolation.
    .
    This library provides a Haskell API for Aurora
Category: System
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Aurora-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base      >= 4 && < 5  ,
        wl-pprint         < 1.2,
        text
    Exposed-Modules:
        Aurora.Config,
        Aurora.Constants,
        Aurora.Constraint,
        Aurora.Container,
        Aurora.Docker,
        Aurora.HealthCheckConfig,
        Aurora.Job,
        Aurora.Optional,
        Aurora.Pretty,
        Aurora.Process,
        Aurora.Resources,
        Aurora.Task,
        Aurora.UpdateConfig
    GHC-Options: -Wall
